(Hopefully) right way to get rid of the relative link, without breaking the developer build.
git-svn-id: https://ut.svn.beanstalkapp.com/ngfw/work/src@17541 8ebf8b4e-06f3-0310-961f-89f74618be54

--- a/debian/rules
+++ b/debian/rules
@@ -69,6 +69,8 @@ install: build
 	@dh_testroot
 	@dh_installdirs -a
 	rake install
+	rm -f debian/untangle-vm/usr/share/untangle-vm/log
+	ln -sf /var/uvm/log debian/untangle-vm/usr/share/untangle-vm/log
 
 binary-arch: install
 	@dh_testdir
