Lintian fixes, take #3.
git-svn-id: https://ut.svn.beanstalkapp.com/ngfw/work/src@17587 8ebf8b4e-06f3-0310-961f-89f74618be54

--- a/debian/rules
+++ b/debian/rules
@@ -69,8 +69,6 @@ install: build
 	@dh_testroot
 	@dh_installdirs -a
 	rake install
-	rm -f debian/untangle-vm/usr/share/untangle-vm/log
-	ln -sf /var/log/uvm debian/untangle-vm/usr/share/untangle/log
 
 binary-arch: install
 	@dh_testdir
@@ -92,7 +90,8 @@ binary-arch: install
 #	@dh_undocumented
 	@dh_installchangelogs
 	@dh_strip
-#	@dh_link
+	rm -f debian/untangle-vm/usr/share/untangle/log
+	@dh_link
 	@dh_compress
 #	@dh_fixperms
 	@dh_installdeb
