--- a/debian/control
+++ b/debian/control
@@ -2,7 +2,7 @@ Source: untangle-vm
 Section: net
 Priority: optional
 Maintainer: Sebastien Delafond <seb@untangle.com>
-Uploaders: buildbot <buildbot@untangle.com>
+Uploaders: Untangle Buildbot <buildbot@untangle.com>
 Build-Depends: untangle-development-build
 Standards-Version: 3.8.0
 
