--- a/debian/rules
+++ b/debian/rules
@@ -69,6 +69,8 @@ install: build
 	@dh_testroot
 	@dh_installdirs -a
 	rake install
+	rm -f debian/untangle-vm/usr/share/untangle/log
+	ln -sf /var/log/uvm debian/untangle-vm/usr/share/untangle/log
 
 binary-arch: install
 	@dh_testdir
@@ -90,8 +92,7 @@ binary-arch: install
 #	@dh_undocumented
 	@dh_installchangelogs
 	@dh_strip
-	rm -f debian/untangle-vm/usr/share/untangle/log
-	@dh_link
+#	@dh_link
 	@dh_compress
 #	@dh_fixperms
 	@dh_installdeb
