More lintian fixes.
git-svn-id: https://ut.svn.beanstalkapp.com/ngfw/work/src@17595 8ebf8b4e-06f3-0310-961f-89f74618be54

--- a/debian/control
+++ b/debian/control
@@ -1039,7 +1039,7 @@ Description: Untangle Server
 
 Package: untangle-libuvm
 Architecture: all
-Conflicts: untangle-vm (< 5.1)
+Conflicts: untangle-vm (<< 5.1)
 Depends: sun-java5-jre | sun-java6-jre
 XB-Display-Name: Untangle Server Libraries
 XB-Untangle-Type: library
