accomodate lintian some more.
git-svn-id: https://ut.svn.beanstalkapp.com/ngfw/work/src@17668 8ebf8b4e-06f3-0310-961f-89f74618be54

--- a/debian/rules
+++ b/debian/rules
@@ -79,7 +79,7 @@ binary-arch: install
 #	@dh_movefiles
 #	@dh_installdebconf
 	@dh_shlibdeps
-	@dh_installdocs
+	@dh_installdocs -n
 #	@dh_installexamples
 #	@dh_installmenu
 	@dh_installlogrotate
