--- a/uvm-lib/servlets/webui/root/build.xml
+++ b/uvm-lib/servlets/webui/root/build.xml
@@ -43,6 +43,9 @@
             <fileset dir="./../../../../ips/hier/usr/share/untangle/web/webui/script/">
                 <include name="**/*.*"/>
             </fileset>
+            <fileset dir="./../../../../../../hades/rup/portal/hier/usr/share/untangle/web/webui/script/">
+                <include name="**/*.*"/>
+            </fileset>
         </copy>
         <copy todir="${deploy.path}/skins"  preservelastmodified="true" verbose="true">
         	<fileset dir="./skins/">
@@ -55,11 +58,11 @@
             </fileset>
         </copy>
 
-        <copy todir="${deploy.path}/../ROOT"  preservelastmodified="true" verbose="true">
+        <!--copy todir="${deploy.path}/../ROOT"  preservelastmodified="true" verbose="true">
         	<fileset dir="../../ROOT/root/">
                 <include name="*.*"/>
             </fileset>
-        </copy>
+        </copy-->
 
         <copy todir="${deploy.path}/../quarantine" preservelastmodified="true" verbose="true" failonerror="false">
           <fileset dir="./../../../../mail-casing/servlets/quarantine/root/">
