--- a/uvm-lib/servlets/webui/root/build.xml
+++ b/uvm-lib/servlets/webui/root/build.xml
@@ -46,6 +46,9 @@
             <fileset dir="./../../../../firewall/hier/usr/share/untangle/web/webui/script/">
                 <include name="**/*.*"/>
             </fileset>
+            <fileset dir="./../../../../openvpn/hier/usr/share/untangle/web/webui/script/">
+                <include name="**/*.*"/>
+            </fileset>
             <fileset dir="./../../../../../../hades/rup/portal/hier/usr/share/untangle/web/webui/script/">
                 <include name="**/*.*"/>
             </fileset>
