Untangle Reports - Status
git-svn-id: https://ut.svn.beanstalkapp.com/ngfw/branch/prod/web-ui/work/src@18077 8ebf8b4e-06f3-0310-961f-89f74618be54

--- a/uvm-lib/servlets/webui/root/build.xml
+++ b/uvm-lib/servlets/webui/root/build.xml
@@ -49,6 +49,9 @@
             <fileset dir="./../../../../openvpn/hier/usr/share/untangle/web/webui/script/">
                 <include name="**/*.*"/>
             </fileset>
+            <fileset dir="./../../../../reporting/hier/usr/share/untangle/web/webui/script/">
+                <include name="**/*.*"/>
+            </fileset>
             <fileset dir="./../../../../../../hades/rup/portal/hier/usr/share/untangle/web/webui/script/">
                 <include name="**/*.*"/>
             </fileset>
