openvpn is a service
git-svn-id: https://ut.svn.beanstalkapp.com/ngfw/branch/prod/web-ui/work/src@18216 8ebf8b4e-06f3-0310-961f-89f74618be54

--- a/debian/control
+++ b/debian/control
@@ -689,7 +689,7 @@ Conflicts: openvpn-transform
 Provides: openvpn-transform
 Replaces: openvpn-transform
 XB-Display-Name: OpenVPN
-XB-Untangle-Type: node
+XB-Untangle-Type: service
 XB-View-Position: 1003
 XB-Desc-Icon: iVBORw0KGgoAAAANSUhEUgAAACoAAAAqCAYAAADFw8lbAAAACXBIWXMAAAsTAAALEwEAmpwY
  AAAABGdBTUEAALGOfPtRkwAAACBjSFJNAAB6JQAAgIMAAPn/AACA6QAAdTAAAOpgAAA6mAAA
