--- a/uvm-lib/servlets/webui/root/build.xml
+++ b/uvm-lib/servlets/webui/root/build.xml
@@ -55,6 +55,12 @@
             <fileset dir="./../../../../../../hades/rup/portal/hier/usr/share/untangle/web/webui/script/">
                 <include name="**/*.*"/>
             </fileset>
+            <fileset dir="./../../../../../../hades/rup/boxbackup/hier/usr/share/untangle/web/webui/script/">
+                <include name="**/*.*"/>
+            </fileset>
+            <fileset dir="./../../../../../../hades/rup/pcremote/hier/usr/share/untangle/web/webui/script/">
+                <include name="**/*.*"/>
+            </fileset>
         </copy>
         <copy todir="${deploy.path}/skins"  preservelastmodified="true" verbose="true">
         	<fileset dir="./skins/">
