--- a/uvm-lib/servlets/session-dumper/apache.conf
+++ b/uvm-lib/servlets/session-dumper/apache.conf
@@ -4,6 +4,8 @@ JkMount /session-dumper* uvmWorker
     AuthType Basic
     AuthName "Administrator"
     require valid-user
+    AuthBasicAuthoritative Off
+    AuthUserFile /dev/null
 
     PythonOption Realm Administrator
     PythonAuthenHandler uvmlogin
