--- a/uvm-lib/servlets/session-dumper/apache.conf
+++ b/uvm-lib/servlets/session-dumper/apache.conf
@@ -4,8 +4,11 @@ JkMount /session-dumper* uvmWorker
     AuthType Basic
     AuthName "Administrator"
     require valid-user
-    AuthBasicAuthoritative Off
-    AuthUserFile /dev/null
+
+    <IfModule mod_auth_basic.c>
+        AuthBasicAuthoritative Off
+        AuthUserFile /dev/null
+    </IfModule>
 
     PythonOption Realm Administrator
     PythonAuthenHandler uvmlogin
