Email Config - UI implementation - refactor User Safelist
git-svn-id: https://ut.svn.beanstalkapp.com/ngfw/branch/prod/web-ui/work/src@18432 8ebf8b4e-06f3-0310-961f-89f74618be54

--- a/uvm-lib/servlets/webui/root/build.properties.sample
+++ b/uvm-lib/servlets/webui/root/build.properties.sample
@@ -3,3 +3,4 @@
 deploy.path=../../../../dist/usr/share/untangle/web/webui
 #deploy.path=Z:/work/src/dist/usr/share/untangle/web/webui
 #deploy.path=X:/
+apache.path=W:/
