moving the serializers into API, that way other webapps can reuse them.
git-svn-id: https://ut.svn.beanstalkapp.com/ngfw/branch/prod/web-ui/work/src@18475 8ebf8b4e-06f3-0310-961f-89f74618be54

--- a/uvm-lib/servlets/setup/apache.conf
+++ b/uvm-lib/servlets/setup/apache.conf
@@ -9,7 +9,7 @@ JkMount /webui* uvmWorker
          AuthUserFile /dev/null
     </IfModule>
 
-    PythonOption Realm Administrator
+    PythonOption Realm SetupWizard
     PythonAuthenHandler uvmlogin
     PythonHeaderParserHandler uvmlogin
 </Location>
