slowly getting there.
git-svn-id: https://ut.svn.beanstalkapp.com/ngfw/branch/prod/web-ui/work/src@18477 8ebf8b4e-06f3-0310-961f-89f74618be54

--- a/uvm-lib/servlets/setup/apache.conf
+++ b/uvm-lib/servlets/setup/apache.conf
@@ -1,6 +1,6 @@
-JkMount /webui* uvmWorker
+JkMount /setup* uvmWorker
 
-<Location /webui>
+<Location /setup>
     AuthType Basic
     AuthName "Administrator"
     require valid-user
@@ -9,7 +9,7 @@ JkMount /webui* uvmWorker
          AuthUserFile /dev/null
     </IfModule>
 
-    PythonOption Realm SetupWizard
+    PythonOption Realm Administrator
     PythonAuthenHandler uvmlogin
     PythonHeaderParserHandler uvmlogin
 </Location>
