1. Setup wizard is now in its own area for the most part. Still needs, a. the language selection page to start before it gets going. b. the redirect engine should automatically direct the user to the setup wizard first if they haven't gone through it yet. c. language map for i18n is not initialized. d. interface remapping page is still a little off.
git-svn-id: https://ut.svn.beanstalkapp.com/ngfw/branch/prod/web-ui/work/src@18506 8ebf8b4e-06f3-0310-961f-89f74618be54

--- a/uvm-lib/servlets/setup/root/WEB-INF/web.xml
+++ b/uvm-lib/servlets/setup/root/WEB-INF/web.xml
@@ -18,7 +18,7 @@
 
   <servlet>
     <servlet-name>JSONRPCServlet</servlet-name>
-    <servlet-class>com.untangle.uvm.webui.jabsorb.UtJsonRpcServlet</servlet-class>
+    <servlet-class>com.untangle.uvm.setup.jabsorb.UtJsonRpcServlet</servlet-class>
     <init-param>
       <param-name>gzip_threshold</param-name>
       <param-value>200</param-value>
@@ -35,5 +35,4 @@
       index.html
     </welcome-file>
   </welcome-file-list>
-
 </web-app>
