Changes according with mainrack prototype: * created AD rack element (moved from config) * created policy rack element (moved from config)
Closes: #4596, #4597, #4600, #4605

git-svn-id: https://ut.svn.beanstalkapp.com/ngfw/branch/prod/web-ui/work/src@18543 8ebf8b4e-06f3-0310-961f-89f74618be54

--- a/uvm-lib/servlets/webui/root/build.xml
+++ b/uvm-lib/servlets/webui/root/build.xml
@@ -61,6 +61,12 @@
             <fileset dir="./../../../../../../hades/rup/pcremote/hier/usr/share/untangle/web/webui/script/">
                 <include name="**/*.*"/>
             </fileset>
+            <fileset dir="./../../../../../../hades/rup/policy/hier/usr/share/untangle/web/webui/script/">
+                <include name="**/*.*"/>
+            </fileset>
+            <fileset dir="./../../../../../../hades/rup/adconnector/hier/usr/share/untangle/web/webui/script/">
+                <include name="**/*.*"/>
+            </fileset>
         </copy>
         <copy todir="${apache.path}/skins"  preservelastmodified="true" verbose="true">
         	<fileset dir="./../../../../../pkgs/untangle-apache2-config/files/var/www/skins/">
