--- a/debian/control
+++ b/debian/control
@@ -918,7 +918,7 @@ Description: Spam Blocker Base
 
 Package: untangle-client
 Architecture: all
-Depends: sun-java5-jre | sun-java6-jre
+Depends: sun-java6-jre | sun-java5-jre
 Provides: metavize-client
 Conflicts: metavize-client (<< 4.1)
 Replaces: metavize-client (<< 4.1)
@@ -958,7 +958,7 @@ Description: Untangle Client
 
 Package: untangle-libuvmthirdparty
 Architecture: all
-Depends: sun-java5-jre | sun-java6-jre
+Depends: sun-java6-jre | sun-java5-jre
 Conflicts: mvvm (<< 5.0), libuvm-thirdparty, libmvvm-thirdparty
 Provides: libuvm-thirdparty
 Replaces: libuvm-thirdparty
@@ -998,7 +998,7 @@ Description: Untangle Server Thirdparty Libraries
 
 Package: untangle-vm
 Architecture: all
-Depends: sun-java5-jre | sun-java6-jre, untangle-libuvm, untangle-libuvmcore, untangle-libuvmthirdparty, sudo, iptables (>= 1.3.6), untangle-libnfnetlink0, db4.2-util, untangle-ujac2pdf, at, ebtables, mime-support, untangle-nsis-addons, dnsmasq, pppoe, bridge-utils, iputils-ping, curl, wget, sg3-utils, pciutils, libdbd-pg-ruby, ruby1.8, ruby, postgresql-client | postgresql-client-7.4 | postgresql-client-8.1 | postgresql-client-8.2, postgresql | postgresql-7.4 | postgresql-8.1 | postgresql-8.2, untangle-linux-image, exim4-daemon-light | mail-transport-agent, jruby1.0, libgettext-ruby, ethtool, net-tools, dnsutils, untangle-net-alpaca, untangle-node-router, untangle-ldap-server, libgpgme-ruby, dash
+Depends: untangle-keyring, sun-java6-jre | sun-java5-jre, untangle-libuvm, untangle-libuvmcore, untangle-libuvmthirdparty, sudo, iptables (>= 1.3.6), untangle-libnfnetlink0, db4.2-util, untangle-ujac2pdf, at, ebtables, mime-support, untangle-nsis-addons, dnsmasq, pppoe, bridge-utils, iputils-ping, curl, wget, sg3-utils, pciutils, libdbd-pg-ruby, ruby1.8, ruby, postgresql-client | postgresql-client-7.4 | postgresql-client-8.1 | postgresql-client-8.2, postgresql | postgresql-7.4 | postgresql-8.1 | postgresql-8.2, untangle-linux-image, exim4-daemon-light | mail-transport-agent, jruby1.0, libgettext-ruby, ethtool, net-tools, dnsutils, untangle-net-alpaca, untangle-node-router, untangle-ldap-server, libgpgme-ruby, dash, perl
 Recommends: untangle-postgresql-config, untangle-gateway-light
 Provides: mvvm
 Conflicts: mvvm, untangle-restore-tools (<< 5.1), untangle-linux-image-2.6.16-ck11-untangle-prod-486, untangle-linux-image-2.6.16-ck11-untangle-prod-xd-486, untangle-linux-image-2.6.16-ck11-untangle-cd-486, untangle-slapd, untangle-libldap-2.2-7, untangle-ldap-utils
@@ -1040,7 +1040,7 @@ Description: Untangle Server
 Package: untangle-libuvm
 Architecture: all
 Conflicts: untangle-vm (<< 5.1)
-Depends: sun-java5-jre | sun-java6-jre
+Depends: sun-java6-jre | sun-java5-jre
 XB-Display-Name: Untangle Server Libraries
 XB-Untangle-Type: library
 XB-Desc-Icon: iVBORw0KGgoAAAANSUhEUgAAACoAAAAqCAIAAABKoV4MAAAABGdBTUEAANbY1E9Y
@@ -1077,6 +1077,6 @@ Description: Untangle Server Libraries
 
 Package: untangle-buildutil
 Architecture: all
-Depends: sun-java5-jre | sun-java6-jre
+Depends: sun-java6-jre | sun-java5-jre
 Description: Untangle Server Build Utils
  The Untangle Build Utils.
