--- a/uvm-lib/servlets/setup/root/WEB-INF/web.xml
+++ b/uvm-lib/servlets/setup/root/WEB-INF/web.xml
@@ -13,7 +13,17 @@
 
   <servlet-mapping>
     <servlet-name>SetupServlet</servlet-name>
-    <url-pattern>/index.html</url-pattern>
+    <url-pattern>/index.do</url-pattern>
+  </servlet-mapping>
+
+  <servlet>
+    <servlet-name>WelcomeServlet</servlet-name>
+    <servlet-class>com.untangle.uvm.setup.servlet.Welcome</servlet-class>
+  </servlet>
+
+  <servlet-mapping>
+    <servlet-name>WelcomeServlet</servlet-name>
+    <url-pattern>/welcome.do</url-pattern>
   </servlet-mapping>
 
   <servlet>
@@ -32,7 +42,7 @@
 
   <welcome-file-list>
     <welcome-file>
-      index.html
+      index.do
     </welcome-file>
   </welcome-file-list>
 </web-app>
