A few more touches on the setup wizard.
git-svn-id: https://ut.svn.beanstalkapp.com/ngfw/branch/prod/web-ui/work/src@18596 8ebf8b4e-06f3-0310-961f-89f74618be54

--- a/uvm-lib/servlets/setup/root/WEB-INF/web.xml
+++ b/uvm-lib/servlets/setup/root/WEB-INF/web.xml
@@ -17,6 +17,16 @@
   </servlet-mapping>
 
   <servlet>
+    <servlet-name>LanguageServlet</servlet-name>
+    <servlet-class>com.untangle.uvm.setup.servlet.Language</servlet-class>
+  </servlet>
+
+  <servlet-mapping>
+    <servlet-name>LanguageServlet</servlet-name>
+    <url-pattern>/language.do</url-pattern>
+  </servlet-mapping>
+
+  <servlet>
     <servlet-name>WelcomeServlet</servlet-name>
     <servlet-class>com.untangle.uvm.setup.servlet.Welcome</servlet-class>
   </servlet>
