Add setup entry to build.xml
git-svn-id: https://ut.svn.beanstalkapp.com/ngfw/work/src@19025 8ebf8b4e-06f3-0310-961f-89f74618be54

--- a/uvm-lib/servlets/webui/root/build.xml
+++ b/uvm-lib/servlets/webui/root/build.xml
@@ -95,6 +95,12 @@
             <include name="**/*.*"/>
           </fileset>
         </copy>
+    	
+        <copy todir="${deploy.path}/../setup/script" preservelastmodified="true" verbose="true" failonerror="false">
+            <fileset dir="./../../setup/root/script/">
+                <include name="**/*.*"/>
+            </fileset>
+        </copy>
     </target>
 	
 
