depend on libuvm
git-svn-id: https://ut.svn.beanstalkapp.com/ngfw/work/src@19295 8ebf8b4e-06f3-0310-961f-89f74618be54

--- a/debian/control
+++ b/debian/control
@@ -903,7 +903,7 @@ Description: Spam Blocker Base
 
 Package: untangle-base-webfilter
 Architecture: all
-Depends: untangle-vm, untangle-casing-http
+Depends: untangle-libuvm, untangle-casing-http
 XB-Display-Name: WebFilter Base
 XB-Untangle-Type: base
 Description: WebFilter Base
