helpSource support added for settings tabs. help button added in nodes settings buttons refactoring.
git-svn-id: https://ut.svn.beanstalkapp.com/ngfw/work/src@19300 8ebf8b4e-06f3-0310-961f-89f74618be54

--- a/uvm-lib/servlets/webui/root/build.xml
+++ b/uvm-lib/servlets/webui/root/build.xml
@@ -25,6 +25,9 @@
         	<fileset dir="./../../../../shield/hier/usr/share/untangle/web/webui/script/">
 				<include name="**/*.*"/>
         	</fileset>
+            <fileset dir="./../../../../webfilter-base/hier/usr/share/untangle/web/webui/script/">
+                <include name="**/*.*"/>
+            </fileset>
         	<fileset dir="./../../../../webfilter/hier/usr/share/untangle/web/webui/script/">
 				<include name="**/*.*"/>
         	</fileset>
@@ -65,6 +68,9 @@
                 <include name="**/*.*"/>
             </fileset>
             <fileset dir="./../../../../../../hades/rup/adconnector/hier/usr/share/untangle/web/webui/script/">
+                <include name="**/*.*"/>
+            </fileset>
+            <fileset dir="./../../../../../../hades/rup/sitefilter/hier/usr/share/untangle/web/webui/script/">
                 <include name="**/*.*"/>
             </fileset>
         </copy>
