Updating openvpn to allow for direct downloads and uploading the configuration for site configuration.
git-svn-id: https://ut.svn.beanstalkapp.com/ngfw/work/src@19509 8ebf8b4e-06f3-0310-961f-89f74618be54

--- a/openvpn/servlets/openvpn/root/WEB-INF/web.xml
+++ b/openvpn/servlets/openvpn/root/WEB-INF/web.xml
@@ -56,6 +56,17 @@
     <url-pattern>/config.zip</url-pattern>
   </servlet-mapping>
 
+  <servlet>
+    <servlet-name>ClientSetup</servlet-name>
+    <servlet-class>com.untangle.node.openvpn.servlet.ClientSetup</servlet-class>
+    <load-on-startup>1</load-on-startup>
+  </servlet>
+
+  <servlet-mapping>
+    <servlet-name>ClientSetup</servlet-name>
+    <url-pattern>/clientSetup</url-pattern>
+  </servlet-mapping>
+
   <servlet-mapping>
     <servlet-name>Start</servlet-name>
     <url-pattern>*.html</url-pattern>
