Tell lintian that openvpn's installer-win32/license.txt is ok, really.
git-svn-id: https://ut.svn.beanstalkapp.com/ngfw/work/src@19532 8ebf8b4e-06f3-0310-961f-89f74618be54

--- a/debian/rules
+++ b/debian/rules
@@ -96,6 +96,7 @@ binary-arch: install
 #	@dh_link
 	@dh_compress
 #	@dh_fixperms
+	@dh_lintian
 	@dh_installdeb
 #	@dh_perl
 	@for i in $(PACKAGES) ; do \
