closes: #4553 show forbidden error page when external access denied
git-svn-id: https://ut.svn.beanstalkapp.com/ngfw/work/src@19774 8ebf8b4e-06f3-0310-961f-89f74618be54

--- a/uvm-lib/servlets/webui/apache.conf
+++ b/uvm-lib/servlets/webui/apache.conf
@@ -10,6 +10,7 @@ JkMount /webui* uvmWorker
     </IfModule>
 
     PythonOption Realm Administrator
+    PythonOption UseRemoteAccessSettings yes
     PythonAuthenHandler uvmlogin
     PythonHeaderParserHandler uvmlogin
 </Location>
