conflict with old untangle-node-webfilter
git-svn-id: https://ut.svn.beanstalkapp.com/ngfw/work/src@19811 8ebf8b4e-06f3-0310-961f-89f74618be54

--- a/debian/control
+++ b/debian/control
@@ -904,6 +904,7 @@ Description: Spam Blocker Base
 Package: untangle-base-webfilter
 Architecture: all
 Depends: untangle-libuvm, untangle-casing-http
+Conflicts: untangle-node-webfilter (< 5.4.2)
 XB-Display-Name: WebFilter Base
 XB-Untangle-Type: base
 Description: WebFilter Base
