Fix cache problem with dynamic loaded resources Closes: #5301
git-svn-id: https://ut.svn.beanstalkapp.com/ngfw/work/src@20247 8ebf8b4e-06f3-0310-961f-89f74618be54

--- a/uvm-lib/servlets/webui/root/WEB-INF/web.xml
+++ b/uvm-lib/servlets/webui/root/WEB-INF/web.xml
@@ -9,6 +9,10 @@
   <servlet>
     <servlet-name>StartPageServlet</servlet-name>
     <servlet-class>com.untangle.uvm.webui.servlet.StartPageServlet</servlet-class>
+    <init-param>
+      <param-name>buildStamp</param-name>
+      <param-value>@BUILD_STAMP@</param-value>
+    </init-param>
     <load-on-startup>1</load-on-startup>
   </servlet>
 
