--- a/uvm-lib/servlets/reports/root/WEB-INF/web.xml
+++ b/uvm-lib/servlets/reports/root/WEB-INF/web.xml
@@ -25,7 +25,7 @@ PUBLIC "-//Sun Microsystems, Inc.//DTD Web Application 2.2//EN"
 
   @JSP_PRE_COMPILED_SERVLETS@
 
-  <display-name>Untangle Reports</display-name>
+  <display-name>Reports</display-name>
 
   <servlet-mapping>
     <servlet-name>com.untangle.uvm.reports.jsp.ReportsIndex_jsp</servlet-name>
